--- a/database/tasks.json
+++ b/database/tasks.json
@@ -1,1 +1,1 @@
-[{"text":"comprare il latte","id":1},{"text":"dare da mangiare al coccodrillo","id":2},{"text":"preparare la torta","id":3},{"text":"preparare la pasta","id":[]},{"text":"preparare la pasta","id":{}}]
+[{"text":"comprare il latte","id":1},{"text":"dare da mangiare al coccodrillo","id":2},{"text":"preparare la torta","id":3}]
